elixir.io-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: elixir-io

spec:
  type: NodePort
  selector:
    app: elixir-io
    environment: production
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
    # protocol: TCP
