elixir.io-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: elixir-io

spec:
  selector:
    app: elixir-io
    environment: production
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
