elixir.io-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elixir-io

spec:
  rules: 
    - host: localhost.info 
      http: 
        paths: 
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: elixir-io
                port: 
                  number: 8000
